# scrobloop

./: .gitattributes  .gitignore  package-lock.json  package.json
recognition/: recognise-audio.py  recognize-audio.py
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: recognize-audio-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lastfm.rs  lib.rs  scrobble.rs  system_audio.m
ui/: auth.html  global.css  index.html  no_internet.html  scrobble.html
